tests/snapshots/test_runner__tests__compiler__typecheck__higher_rank_polymorphism_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let {id} = {
  id: <T>(t: T): T => t
}

do {
  let x: String = "Hello".id(); // No error
  let y: Integer = 123.id(); // No error
  let z: String = 123.id();
  //              ^^^^^^^^ Error: expected String, got Integer
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/higher_rank_polymorphism_1.kk:8:19
  │
8 │   let z: String = 123.id();
  │                   ^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
