tests/snapshots/test_runner__tests__compiler__typecheck__higher_rank_polymorphism_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do {
  let id
    : (a: Integer) => Integer
    = <T>(t: T): T => t
       // ^^^ Error: expected zero type variable, but got one
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/higher_rank_polymorphism_3.kk:4:8
  │
4 │     = <T>(t: T): T => t
  │        ^ Not expecting type variable here
  │
