tests/snapshots/test_runner__tests__compiler__typecheck__if_expression_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
# Condition must be boolean
let x: Null = if 1 2 3

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/if_expression_1.kk:2:18
  │
2 │ let x: Null = if 1 2 3
  │                  ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Boolean     | + Integer   |
    +---------------+-------------+
