tests/snapshots/test_runner__tests__compiler__typecheck__import_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// base file for testing import
// should have no error
export let foo = 2
export enum Color = Red Green
export type People = {name: String}
export let bomb = |_:String  => "Hello"
export let bomb = |_:Boolean  => "World"
let spam = 3

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
