tests/snapshots/test_runner__tests__compiler__typecheck__import_10.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// import all
import * from "./import_1.kk"

foo.print()

let x: Color = Red
x.print()
Green.print()
true.bomb().print()
"hi".bomb().print()

============
EXIT CODE
============
0

============
STDOUT
============
123
{ '$': 'Red', _: null }
{ '$': 'Green', _: null }
World
Hello

============
STDERR
============
